<resources>
    <string name="app_name">Сотрудники</string>
    <string name="addData">Добавить запись</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="age">Возраст</string>
    <string name="photo">Фото</string>
    <string name="add">Добавить</string>
    <string name="back">Назад</string>
    <string name="safe">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="deleteImage">Удалить фото</string>
    <string name="sort">Сортировка:</string>
    <string-array name="spinnerItems">
        <item>нет</item>
        <item>по фамилии</item>
        <item>по имени</item>
        <item>по возрасту</item>
    </string-array>
</resources>