<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Change">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Surname"/>

    <EditText
        android:id="@+id/Surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Name"/>

    <EditText
        android:id="@+id/Name"
        android:hint="@string/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Age"/>

    <EditText
        android:id="@+id/Age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        app:layout_constraintBottom_toTopOf="@id/btnChange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Name" />

    <android.widget.Button
        android:id="@+id/btnChange"
        android:background="@drawable/buttonbackground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change"
        app:layout_constraintEnd_toStartOf="@id/btnDel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Age"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

    <android.widget.Button
        android:id="@+id/btnDel"
        android:background="@drawable/buttonbackground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnChange"
        app:layout_constraintTop_toBottomOf="@id/Age"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"/>

    <android.widget.Button
        android:id="@+id/btnBack"
        android:background="@drawable/buttonbackground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnChange"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>