<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvSort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sort"
        android:textColor="@color/black"
        android:textSize="8pt"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintEnd_toStartOf="@id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerItems"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintStart_toEndOf="@id/tvSort"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/FindSurname"/>

    <EditText
        android:id="@+id/FindSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        android:textSize="8pt"
        android:paddingTop="0px"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/spinner"/>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner">

        <TableLayout
            android:id="@+id/dbOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <android.widget.Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttonbackground"
        android:text="@string/addData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll" />

</androidx.constraintlayout.widget.ConstraintLayout>